menu design finishing

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
                     <li><a href="about_us.html" class="nav_link">about us</a></li>
                 </ul>
                 <div class="cart">
-                    <div class="icon">
-                        <i class="fa-regular fa-cart-shopping"></i>
-                        <p>cart ($56)</p>
-                    </div>
-                </div>
+                    <div class="icon"><i class="fa-solid fa-cart-shopping"></i></div>
+                    <p>cart($56)</p>
+            </div>
             </nav>
         </div>
     </header>
