--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>responsive flowers</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="home">
         <div class="navigation">
             <div class="logo">
                 <img src="assets/logo.png" alt="responsive flowers">
@@ -28,6 +28,18 @@
                     <p>cart($56)</p>
             </div>
             </nav>
+        </div>
+
+        <div class="banner">
+            <div class="banner_title">
+                <div class="title_head">
+                    <h1>always <span>fresh flowers</span> </h1>
+                    <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
+                </div>
+            </div>
+            <div class="banner_img">
+                <img src="assets/hero-flower.png" alt="hero-flower">
+            </div>
         </div>
     </header>
     <main class="main"></main>
