--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class=" nav_link active">home</a></li>
+                    <li><a href="#home" class=" nav_link active">home</a></li>
                     <li><a href="shop.html" class="nav_link">shop</a></li>
                     <li><a href="about_us.html" class="nav_link">about us</a></li>
                 </ul>
