removed other page links

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <nav>
                 <ul>
                     <li><a href="#home" class=" nav_link active">home</a></li>
-                    <li><a href="shop.html" class="nav_link">shop</a></li>
-                    <li><a href="about_us.html" class="nav_link">about us</a></li>
+                    <li><a href="#" class="nav_link">shop</a></li>
+                    <li><a href="#" class="nav_link">about us</a></li>
                 </ul>
                 <div class="cart">
                     <div class="icon"><i class="fa-solid fa-cart-shopping"></i></div>
