removed responsiveness for later

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="#home" class=" nav_link active">home</a></li>
-                    <li><a href="#" class="nav_link">shop</a></li>
+                    <li><a href="#shop" class="nav_link">shop</a></li>
                     <li><a href="#" class="nav_link">about us</a></li>
                 </ul>
                 <div class="cart">
@@ -42,7 +42,122 @@
             </div>
         </div>
     </header>
-    <main class="main"></main>
+
+    <!-- main shop section designing start -->
+    <main class="main">
+        <div class="shop" id="shop">
+            <div class="shop_title">
+                <h1> <span>our</span> plants</h1>
+                <p class="d_small">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="shop_grid_card">
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="cardimg">
+                        <img src="assets/sample-flower-image.png" alt="">
+                    </div>
+                    <div class="card_title">
+                        <h3 class="d_small">Lily Blossom</h3>
+                        <p class="d_small">20 <span>usd</span></p>
+                    </div>
+                    <div class="cardbtn">
+                        <button class="d_small">add to cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- end -->
     <footer class="footer"></footer>
 
 
