--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
     <!-- main shop section designing start -->
     <main class="main">
-        <div class="shop" id="shop">
+        <section>
+            <div class="shop" id="shop">
             <div class="shop_title">
                 <h1> <span>our</span> plants</h1>
                 <p class="d_small">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
@@ -156,11 +157,11 @@
                 </div>
             </div>
         </div>
+        </section>
     </main>
     <!-- end -->
-    <footer class="footer"></footer>
 
-
+   
 <script>
   const links = document.querySelectorAll('.nav_link');
   links.forEach(link => {
