flower lover section final

--- a/index.html
+++ b/index.html
@@ -161,7 +161,37 @@
     </main>
     <!-- end -->
 
-   
+   <section class="flower_lover">
+    <div class="f_main">
+        <div class="brawl">
+            <div class="f_left">
+                <div class="img_container">
+                    <img src="assets/flower-store.png" alt="" class="main_img">
+                    <img src="assets/trusted-badge.png" alt="" class="badge">
+                </div>
+            </div>
+            <div class="f_right">
+                <div class="right_title">
+                    <h3>flower & plants lover</h3>
+                </div>
+                <div class="right_para">
+                    <ul>
+                        <li class="d_small">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="d_small">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="d_small">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
+
+
+   <section class="deals">
+    <div class="deals_main">
+        
+    </div>
+   </section>
 <script>
   const links = document.querySelectorAll('.nav_link');
   links.forEach(link => {
