offer section added

--- a/index.html
+++ b/index.html
@@ -186,12 +186,107 @@
     </div>
    </section>
 
-
-   <section class="deals">
-    <div class="deals_main">
-        
+<!-- deals section -->
+<section class="offer">
+  <div class="offer-main">
+    
+    <div class="offer-top">
+      <div class="title">
+        <h1><span>latest</span> deals</h1>
+        <p class="d_small">
+          Indulge your senses with the beauty and fragrance of our fresh flower shop.
+          From classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+      </div>
     </div>
-   </section>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script>
   const links = document.querySelectorAll('.nav_link');
   links.forEach(link => {
