perfect offer section update

--- a/index.html
+++ b/index.html
@@ -200,6 +200,21 @@
       </div>
     </div>
 
+
+    <div class="offer-grid">
+        <div class="offer-main">
+            <div class="offer-card">
+                <div class="master">
+                    <div class="grid-one">
+                        <h3>60% off | Bloom Plant</h3>
+                        <p>shop now</p>
+                    </div>
+                    <div class="grid-two"></div>
+                </div>
+                <div class="child"></div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
