offer section finalize

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="#home" class=" nav_link active">home</a></li>
                     <li><a href="#shop" class="nav_link">shop</a></li>
-                    <li><a href="#" class="nav_link">about us</a></li>
+                    <li><a href="#about-us" class="nav_link">about us</a></li>
                 </ul>
                 <div class="cart">
                     <div class="icon"><i class="fa-solid fa-cart-shopping"></i></div>
@@ -161,7 +161,7 @@
     </main>
     <!-- end -->
 
-   <section class="flower_lover">
+   <section class="flower_lover" id="about-us">
     <div class="f_main">
         <div class="brawl">
             <div class="f_left">
@@ -209,98 +209,19 @@
                         <h3>60% off | Bloom Plant</h3>
                         <p>shop now</p>
                     </div>
-                    <div class="grid-two"></div>
+                    <div class="grid-two">
+                        <h3>30% off | Ana Plant</h3>
+                        <p>shop now</p>
+                    </div>
                 </div>
-                <div class="child"></div>
+                <div class="child">
+                    <h3>25% off | zabo plant</h3>
+                    <p>shop now</p>
+                </div>
             </div>
         </div>
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <script>
   const links = document.querySelectorAll('.nav_link');
