footer section added

--- a/index.html
+++ b/index.html
@@ -223,6 +223,48 @@
     </div>
 </section>
 
+
+<section class="newsletter">
+    <div class="main-join">
+        <div class="join-title">
+            <h3>join the colorful bunch</h3>
+        </div>
+        <div class="input">
+            <input type="email" placeholder="Write email">
+            <button type="submit">subscribe</button>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="footer-body">
+        <div class="fair-well">
+            <div class="f-logo">
+                <img src="assets/logo.png" alt="">
+                <p class="d_small">Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+            </div>
+        </div>
+        <div class="important-links">
+            <div class="menus">
+                <ul>
+                    <li>home</li>
+                    <li>about us</li>
+                    <li>blog</li>
+                    <li>FAQ</li>
+                    <li>contact us</li>
+                    <li>features</li>
+                    <li>pricing</li>
+                    <li>privacy policy</li>
+                    <li>terms of service</li>
+                    <li>help center</li>
+                </ul>
+            </div>
+        </div>
+        <div class="social-links">
+            
+        </div>
+    </div>
+</footer>
 <script>
   const links = document.querySelectorAll('.nav_link');
   links.forEach(link => {
