added animation to the badge

--- a/index.html
+++ b/index.html
@@ -261,7 +261,14 @@
             </div>
         </div>
         <div class="social-links">
-            
+            <div class="s-main">
+                <div class="s-grid">
+                    <div class="s-1"><img src="assets/icon-linkedin.png" alt=""></div>
+                    <div class="s-1"><img src="assets/icon-twitter.png" alt=""></div>
+                    <div class="s-1"><img src="assets/icon-facebook.png" alt=""></div>
+                    <div class="s-1"><img src="assets/icon-youtube.png" alt=""></div>
+                </div>
+            </div>
         </div>
     </div>
 </footer>
