--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="responsive.css"> -->
     <title>responsive flowers</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
                 <div class="cart">
                     <div class="icon"><i class="fa-solid fa-cart-shopping"></i></div>
                     <p>cart($56)</p>
-            </div>
+                </div>
             </nav>
         </div>
 
