--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <div class="navigation">
             <div class="logo">
                 <img src="assets/logo.png" alt="responsive flowers">
+                <div class="kart">
+                    <div class="icon"><i class="fa-solid fa-cart-shopping"></i></div>
+                    <p>cart($56)</p>
+                </div>
             </div>
             <nav>
                 <ul>
