--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
    </section>
 
 <!-- deals section -->
-<!-- <section class="offer">
+<section class="offer">
   <div class="offer-main">
     
     <div class="offer-top">
@@ -276,7 +276,7 @@
             </div>
         </div>
     </div>
-</footer> -->
+</footer>
 
 
 <script>
