--- a/index.html
+++ b/index.html
@@ -191,7 +191,6 @@
 
 <section class="offer">
   <div class="offer-main">
-    
     <div class="offer-top">
       <div class="title">
         <h1><span>latest</span> deals</h1>
@@ -202,28 +201,23 @@
       </div>
     </div>
 
-
-    <div class="offer-grid">
-        <div class="offer-main">
-            <div class="offer-card">
-                <div class="master">
-                    <div class="grid-one">
-                        <h3>60% off | Bloom Plant</h3>
-                        <p>shop now</p>
-                    </div>
-                    <div class="grid-two">
-                        <h3>30% off | Ana Plant</h3>
-                        <p>shop now</p>
-                    </div>
-                </div>
-                <div class="child">
-                    <h3>25% off | zabo plant</h3>
-                    <p>shop now</p>
-                </div>
-            </div>
-        </div>
+    <div class="offer-card">
+      <div class="grid-one">
+        <h3>60% off | Bloom Plant</h3>
+        <p>shop now</p>
+      </div>
+      <div class="grid-two">
+        <h3>30% off | Ana Plant</h3>
+        <p>shop now</p>
+      </div>
+      <div class="child">
+        <h3>25% off | Zabo Plant</h3>
+        <p>shop now</p>
+      </div>
     </div>
+  </div>
 </section>
+
 
 
 <section class="newsletter">
