--- a/index.html
+++ b/index.html
@@ -202,14 +202,16 @@
     </div>
 
     <div class="offer-card">
-      <div class="grid-one">
-        <h3>60% off | Bloom Plant</h3>
-        <p>shop now</p>
-      </div>
-      <div class="grid-two">
-        <h3>30% off | Ana Plant</h3>
-        <p>shop now</p>
-      </div>
+        <div class="master">
+            <div class="grid-one">
+                <h3>60% off | Bloom Plant</h3>
+                <p>shop now</p>
+            </div>
+            <div class="grid-two">
+                <h3>30% off | Ana Plant</h3>
+                <p>shop now</p>
+            </div>
+        </div>
       <div class="child">
         <h3>25% off | Zabo Plant</h3>
         <p>shop now</p>
