adding an alert function

--- a/index.html
+++ b/index.html
@@ -292,5 +292,11 @@
   });
 </script>
 
+
+<script>
+    window.onload = function(){
+        alert("I have added the OPTIONAL PART ALSO. Thank you for your guidence.")
+    }
+</script>
 </body>
 </html>
