adding an alert function

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
 <script>
     window.onload = function(){
-        alert("I have added the OPTIONAL PART ALSO. Thank you for your guidence.")
+        alert("I have added the OPTIONAL PART ALSO. Thank you for your guidence I am unable to utilize responsive part perfectly please suggest me what else I can do to perfect it some extra tips & tricks would help a lot.")
     }
 </script>
 </body>
